tests/baselines/reference/generatorTypeCheck55.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck55.ts(2,19): error TS9003: 'class' expressions are not currently supported.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck55.ts (1 errors) ====
    function* g() {
        var x = class C extends (yield) {};
                      ~
!!! error TS9003: 'class' expressions are not currently supported.
    }